# rel4_kernel

./: .gitignore  Cargo.toml  README.md  baseline.txt  build.py  build.sh  cost_cal.py  makefile  rel4.txt
common/: Cargo.toml
common/src/: console.rs  fault.rs  lib.rs  logging.rs  message_info.rs  object.rs  sbi.rs  sel4_config.rs  structures.rs  utils.rs
cspace/: Cargo.toml
cspace/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
cspace/src/: cap_rights.rs  compatibility.rs  cte.rs  deps.rs  interface.rs  lang_items.rs  lib.rs  mdb.rs  structures.rs  utils.rs
ipc/: Cargo.toml
ipc/src/: endpoint.rs  lib.rs  notification.rs  transfer.rs
scripts/: net_test.py  test_bash.sh
src/: config.rs  debug.rs  deps.rs  exception.rs  heap_alloc.rs  lang_items.rs  lib.rs  logging.rs  riscv.rs  sbi.rs  smp.rs  structures.rs  sync.rs  syscall.rs  utils.rs
src/.cargo/: config
src/async_runtime/: async_syscall_handler.rs  coroutine.rs  executor.rs  mod.rs  new_buffer.rs  utils.rs
src/boot/: heap.rs  interface.rs  mm.rs  mod.rs  root_server.rs  untyped.rs  utils.rs
src/common/: console.rs  fault.rs  logging.rs  message_info.rs  mod.rs  object.rs  sbi.rs  sel4_config.rs  structures.rs  utils.rs
src/cspace/: cap_rights.rs  compatibility.rs  cte.rs  deps.rs  interface.rs  mdb.rs  mod.rs  structures.rs  utils.rs
src/interrupt/: handler.rs  mod.rs  plic.rs
src/kernel/: boot.rs  c_traps.rs  cspace.rs  fastpath.rs  fault.rs  faulthandler.rs  mod.rs  preemption.rs  restore_fp.S  syscall.rs  thread.rs  transfermsg.rs  vspace.rs
src/object/: cap.rs  cnode.rs  endpoint.rs  (+7 more)
task_manager/: Cargo.toml
vspace/: Cargo.toml
vspace/src/: asid.rs  interface.rs  lib.rs  pte.rs  satp.rs  structures.rs  utils.rs  vm_rights.rs
(+348 files in other folders)
