[package]
name = "ipc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
task_manager = { path = "../task_manager" }
cspace = { path = "../cspace" }
vspace = { path = "../vspace" }
log = "0.4"